--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,12 +36,12 @@ body::before {
 }
 
 a {
-  color: #18d26e;
+  color: royalblue;
   text-decoration: none;
 }
 
 a:hover {
-  color: #35e888;
+  color: royalblue;
   text-decoration: none;
 }
 
@@ -95,7 +95,7 @@ h6 {
 
 #header h2 span {
   color: #fff;
-  border-bottom: 2px solid #18d26e;
+  border-bottom: 2px solid royalblue;
   padding-bottom: 6px;
 }
 
@@ -124,7 +124,7 @@ h6 {
 }
 
 #header .social-links a:hover {
-  background: #18d26e;
+  background: royalblue;
 }
 
 @media (max-width: 992px) {
@@ -247,7 +247,7 @@ h6 {
   height: 2px;
   bottom: -4px;
   left: 0;
-  background-color: #18d26e;
+  background-color: royalblue;
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
@@ -391,7 +391,7 @@ section .container {
   width: 120px;
   height: 1px;
   display: inline-block;
-  background: #4ceb95;
+  background:  royalblue;
   margin: 4px 10px;
 }
 
@@ -411,7 +411,7 @@ section .container {
 .about-me .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #18d26e;
+  color: royalblue;
 }
 
 .about-me .content ul {
@@ -432,7 +432,7 @@ section .container {
 .about-me .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #18d26e;
+  color: royalblue;
   line-height: 0;
 }
 
@@ -463,7 +463,7 @@ section .container {
   font-size: 24px;
   background: rgba(255, 255, 255, 0.1);
   padding: 12px;
-  color: #18d26e;
+  color: royalblue;
   border-radius: 50px;
   line-height: 0;
 }
@@ -515,7 +515,7 @@ section .container {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #18d26e;
+  background-color: royalblue;
 }
 
 /*--------------------------------------------------------------
@@ -803,7 +803,7 @@ section .container {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  background: #18d26e;
+  background: royalblue;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -903,7 +903,7 @@ section .container {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #63eda3;
+  color: royalblue;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -997,7 +997,7 @@ section .container {
 }
 
 .portfolio-details .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #18d26e;
+  background-color: royalblue;
 }
 
 /*--------------------------------------------------------------
@@ -1012,7 +1012,7 @@ section .container {
 
 .contact .info-box i.bx {
   font-size: 24px;
-  color: #18d26e;
+  color: royalblue;
   border-radius: 50%;
   padding: 14px;
   float: left;
@@ -1049,7 +1049,7 @@ section .container {
 }
 
 .contact .info-box .social-links a:hover {
-  color: #18d26e;
+  color:  royalblue;
 }
 
 .contact .php-email-form {
@@ -1073,7 +1073,7 @@ section .container {
 .contact .php-email-form .sent-message {
   display: none;
   background: rgba(255, 255, 255, 0.08);
-  background: #18d26e;
+  background: royalblue;
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -1093,7 +1093,7 @@ section .container {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
+  border: 3px solid royalblue;
   border-top-color: #eee;
   animation: animate-loading 1s linear infinite;
 }
@@ -1135,7 +1135,7 @@ section .container {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #18d26e;
+  background: royalblue;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1144,7 +1144,7 @@ section .container {
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: #15bb62;
+  background:  royalblue;
 }
 
 @keyframes animate-loading {
@@ -1181,7 +1181,7 @@ section .container {
 }
 
 .credits a {
-  color: #18d26e;
+  color: royalblue;
   transition: 0.3s;
 }
 
